# LXAdmin

./: .gitignore  Makefile.in  TRANSLATION  aclocal.m4  autogen.sh  configure.ac  git-build
data/: Makefile.am  Makefile.in  keyboard-setup.desktop.in  lxadmin.desktop.in  lxcc.desktop.in  lxdmconf.desktop.in  lxfontconfig.desktop.in  lxkeyboard-setup.desktop.in  lxproxy.desktop.in  lxscreenshot.desktop.in  lxservices.desktop.in  openbox-keyconf.desktop.in
data/media/: Makefile.am
data/ui/: Makefile.am  Makefile.in  about.glade.in
data/ui/lxproxy/: AboutLxproxyDialog.ui  LxproxyWindow.ui  Makefile.am  PreferencesLxproxyDialog.ui  lxproxy_window.xml
debian/: changelog  control  copyright  docs  lxadmin.install  lxcc.install  lxdmconf.install  lxfontconfig.install  lxkeyboardconf.install  lxproxy.install  lxscreenshot.install  lxservices.install  openbox-keyconf.install  rules  watch
locale/de/: fontconfig.moo  keyboard-setup.moo  lxcc.moo  lxdmconf.moo  openbox-keyconf.moo  screenshot.py.moo  services.py.moo
locale/it/: lxdmconf.moo
locale/ru/: fontconfig.py.moo  keyboard-setup.moo  lxdmconf.moo  screenshot.py.moo
po/: POTFILES.in  de.po  fr.po  it.po  lxadmin.pot  ru.po  uk.po
src/: Makefile.am  Makefile.in  lxadmin.c
src/common/: Makefile.am  defs.py.in  detect_os.py
src/fontconfig/: Makefile.am
src/keyboardconf/: Makefile.am  keyboardconf
src/lxcc/: Makefile.am  lxcc  lxcc.py
src/lxdmconf/: Makefile.am  lxdmconf.py
src/lxfontconfig/: Makefile.am  fontconfig.py  lxfontconfig.py
src/lxkeyboardconf/: Makefile.am  lxkeyboardconf.py
src/lxproxy/: AUTHORS  AboutLxproxyDialog.py  Copyright  Makefile.am  PreferencesLxproxyDialog.py  about_lxproxy_dialog.xml  lxproxy.py  lxproxyconfig.py  preferences_lxproxy_dialog.xml
src/lxscreenshot/: Makefile.am  lxscreenshot.py  screenshot.py
src/lxservices/: Makefile.am  lxservices.py
src/openbox-keyconf/: Makefile.am  openbox-keyconf  openbox-keyconf.py
src/screenshot/: Makefile.am
src/services/: Makefile.am  services.py
